# neurena-fund

./: CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
contracts/: Cargo.toml  package-lock.json  package.json  tournament.rs  vault.rs
contracts/artifacts/: tournament-deployment.json  tournament.wasm  vault-deployment.json
contracts/artifacts/tournament/raw/: execute.json
contracts/artifacts/vault/: vault.json
contracts/scripts/: build.sh  config.json  deploy.sh  deploy.ts  setup_injective.sh
contracts/src/: lib.rs  tournament.rs  vault.rs
contracts/tournament/: Cargo.toml
contracts/tournament/schema/: tournament.json
contracts/tournament/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault/schema/raw/: execute.json
contracts/vault/src/: lib.rs
neurana-fontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
neurana-fontend/app/: layout.tsx  page.tsx
neurana-fontend/app/agent/: page.tsx
neurana-fontend/app/components/: navbar.tsx  wallet-connect.tsx
neurana-fontend/app/connect/: page.tsx
neurana-fontend/components/: wallet-connect.tsx
src/: app.ts  index.ts
src/config/: firebase.ts  index.ts
src/controllers/: agentController.ts  userController.ts
src/models/: Agent.ts  Investment.ts  LiveTrade.ts  PlatformFee.ts  Tournament.ts  TradeSimulation.ts  User.ts  Vault.ts
src/routes/: agentRoutes.ts  trades.ts  userRoutes.ts
src/services/: agentService.ts  autonomousTradeService.ts  chromaService.ts  geminiService.ts  schedulerService.ts  userService.ts
tests/: api.http
(+3 files in other folders)
