[package]
name = "neurena-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
schemars = "0.8.10"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.31"
cosmwasm-schema = "1.1.0"
cw2 = "1.0.1"

[dev-dependencies]
cw-multi-test = "0.16.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true 