[package]
name = "tournament"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
serde = { version = "1.0.193", features = ["derive"] }
cosmwasm-schema = "1.5.0"
thiserror = "1.0.31"

[dev-dependencies]
cw-multi-test = "0.16.2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true